hydrated-manifests/kafka/akhq/templates/schema-registry/deployment.yaml
---
# Source: akhq/templates/schema-registry/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-schema-registry
  annotations:
    argocd.argoproj.io/sync-wave: "10"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-schema-registry
  template:
    metadata:
      labels:
        app: kafka-schema-registry
    spec:
      containers:
        - name: schema-registry
          image: confluentinc/cp-schema-registry:8.0.0
          resources:
            limits:
              cpu: 400m
              memory: 512Mi
            requests:
              cpu: 40m
              memory: 320Mi
          ports:
            - containerPort: 8081
              name: http
              protocol: TCP
